move images to images/ folder

--- a/readme.org
+++ b/readme.org
@@ -7,9 +7,9 @@
   image of the memory editor
   #+CAPTION: image of memory editor
   #+NAME:   fig.editor
-  [[editor.png]]
+  [[images/editor.png]]
 
   image of home
   #+CAPTION: image of home
   #+NAME:   fig.home
-  [[home.png]]
+  [[images/home.png]]
